--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,4 +9,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #=====Export Path =============#
-basic.path=D:\\DemoSerialization\\EmployeeDetails_Prod.xlsx
+basic.path=D:\DemoSerialization\prod\EmployeeDetails_Prod.xlsx
