--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
    			 <artifactId>poi-ooxml</artifactId>
    			 <version>4.1.0</version>
 		</dependency>	
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
